# JEM-coin

./: .env.dev  .env.postgres  .gitignore  AGENTS.md  Cargo.toml  README.md  REPORT.md  jems.config.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  website.yml
apis/graphql/: README.md  index.js  package.json
apis/rpc/: schema.json
chain/crates/jems-consensus/: Cargo.toml
chain/crates/jems-core/: Cargo.toml
chain/crates/jems-crypto/: Cargo.toml
chain/crates/jems-node/: Cargo.toml
chain/crates/jems-p2p/: Cargo.toml
chain/crates/jems-rpc/: Cargo.toml
chain/crates/jems-rpc/src/: lib.rs
chain/crates/jems-rpc/tests/: get_params.rs  schema.rs
chain/crates/jems-storage/: Cargo.toml
chain/scripts/: genesis.ts
clients/explorer/: package.json
clients/explorer/components/: BlockHeaderCard.tsx
clients/explorer/pages/: _app.tsx  honeypots.tsx  index.tsx  params.tsx
clients/indexer/: package.json  tsconfig.json
clients/sdk-mobile/: package.json
clients/sdk-web/: package.json
clients/wallet-core/: package.json  tsconfig.json
clients/wallet-desktop/: package.json
clients/wallet-extension/: package.json
clients/website/: .env.local.example  README.md  README.md.bak.1756143125  package.json  playwright.config.ts
docs/: README.md  localnet-native.md  localnet.md  protocol-v0.3.md  wallet-desktop.md  whitepaper.md  zk-presence.md
scripts/: faucet.sh  migrate.sh  run-localnet.sh
scripts/native/: demo-governance-change.sh  native-localnet.sh  native-stop.sh  seed-actions.sh
(+86 files in other folders)
