[package]
name = "jems-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"
jems-core = { path = "../jems-core" }

[dev-dependencies]
tower = "0.5"
hyper = "0.14"
